# Vulkan-Lessons

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  vcpkg.json
src/0.InitialSetup/: CMakeLists.txt  main.cpp
src/Common/: CMakeLists.txt  common.cpp  common.h  outfits.rc  resource.h
